Create git.css;Modified index.html:h1 and import git.css

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="git.css">
     <title>Title</title>
 </head>
 <body>
-hello world
+<h1>I always love Prts </h1>
 </body>
 </html>
